# claude-code-buddy-patcher

./: .gitignore  README.md  pyproject.toml
scripts/: format-py.sh
src/buddy_patcher/: build.py  bun_hash.mjs  cli.py  common.py  find.py  hasher.py  install.py  roller.py  sprites.py  types.py  uninstall.py  wyhash.c
src/buddy_patcher/templates/: buddy-patcher.service  launchagent.plist  watcher.py
